Cleaning up project

--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -6,7 +6,8 @@
                 <a class="album-name" ui-sref="album">{{ album.name }}</a>
                 <br/>
                 <a ui-sref="album">{{ album.artist }}</a>
-                <br/> {{ album.songs.length }} songs
+                <br/> 
+                {{ album.songs.length }} songs
                 <br/>
             </p>
         </div>
